@@ -8,7 +8,6 @@ import org.spongepowered.asm.mixin.Shadow;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Ingredient;
 
@@ -20,7 +19,6 @@ public class Ingredient_scarpetMixin implements IngredientInterface
     @Override
     public List<Collection<ItemStack>> getRecipeStacks()
     {
-        List<Collection<ItemStack>> res = Arrays.stream(values).map(Ingredient.Value::getItems).collect(Collectors.toList());
-        return res;
+        return Arrays.stream(values).map(Ingredient.Value::getItems).toList();
     }
 }
