@@ -1,7 +1,7 @@
 package carpet.script.utils;
 
-import java.util.Arrays;
 import java.util.List;
+
 import net.minecraft.world.Container;
 import net.minecraft.world.entity.EquipmentSlot;
 import net.minecraft.world.entity.LivingEntity;
@@ -10,13 +10,14 @@ import net.minecraft.world.item.ItemStack;
 
 public class EquipmentInventory implements Container
 {
-    private static final List<EquipmentSlot> slotToSlot = Arrays.asList(
+    private static final List<EquipmentSlot> slotToSlot = List.of(
             EquipmentSlot.MAINHAND,
             EquipmentSlot.FEET, EquipmentSlot.LEGS, EquipmentSlot.CHEST, EquipmentSlot.HEAD,
             EquipmentSlot.OFFHAND
     );
 
     LivingEntity mob;
+
     public EquipmentInventory(LivingEntity mob)
     {
         this.mob = mob;
@@ -31,8 +32,13 @@ public class EquipmentInventory implements Container
     @Override
     public boolean isEmpty()
     {
-        for (EquipmentSlot slot: slotToSlot)
-            if (!mob.getItemBySlot(slot).isEmpty()) return false;
+        for (EquipmentSlot slot : slotToSlot)
+        {
+            if (!mob.getItemBySlot(slot).isEmpty())
+            {
+                return false;
+            }
+        }
         return true;
     }
 
@@ -117,7 +123,9 @@ public class EquipmentInventory implements Container
     @Override
     public void clearContent()
     {
-        for (EquipmentSlot slot: slotToSlot)
+        for (EquipmentSlot slot : slotToSlot)
+        {
             mob.setItemSlot(slot, ItemStack.EMPTY);
+        }
     }
 }
